--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <input id="sceltaUtente" placeholder="inserisci un numero da 1 a 5" type="text">
+    <input id="pariDispari" placeholder="scegli tra pari e dispari" type="text">
+    <button id="button">Cliccami</button>
+    <p id="somma"></p>
     <script src="./js/main.js"></script>
 </body>
 </html>
