--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="sceltaUtente" placeholder="inserisci un numero da 1 a 5" type="text">
+    <input id="sceltaUtente" placeholder="inserisci un numero da 1 a 5" type="number">
     <input id="pariDispari" placeholder="scegli tra pari e dispari" type="text">
     <button id="button">Cliccami</button>
     <p id="somma"></p>
